# whip-hs

./: .gitignore  LICENSE  Main.hs  whip.cabal
Whip/: Interpreter.hs  Main.hs  Parser.hs  Types.hs
src/: Whip.hs
src/Whip/: Interpreter.hs  Parser.hs  Types.hs
test/: Test.hs
