name:                whip
version:             0.1.0.0
synopsis:            An interpreter for the Whip LISP dialect
homepage:            https://github.com/L8D/whip-hs
license:             MIT
license-file:        LICENSE
author:              L8D
maintainer:          tenorbiel@gmail.com
build-type:          Simple
cabal-version:       >=1.10


executable whip
  ghc-options:         -Wall
  main-is:             Main.hs
  build-depends:       base >=4.7 && <4.8
               ,       parsec >=3.1 && <3.2
               ,       containers >=0.5.5 && <0.5.6
  default-language:    Haskell2010

