name:                whip
version:             0.1.0.0
synopsis:            An interpreter for the Whip LISP dialect
homepage:            https://github.com/L8D/whip-hs
license:             MIT
license-file:        LICENSE
author:              L8D
maintainer:          tenorbiel@gmail.com
build-type:          Simple
cabal-version:       >=1.10

library
  ghc-options:         -Wall -Werror
  exposed-modules:     Whip, Whip.Interpreter, Whip.Types, Whip.Parser
  build-depends:       base >=4.7 && <4.8
               ,       parsec >=3.1 && <3.2
               ,       containers >=0.5.5 && <0.5.6
  hs-source-dirs:      src
  default-language:    Haskell2010

executable whip
  ghc-options:         -Wall -Werror
  main-is:             src/Main.hs
  build-depends:       base
               ,       whip
               ,       containers
  default-language:    Haskell2010

